<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.android.quizzy.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/quiz_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/quiz_name"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/tiger_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quiz_name"
            android:src="@drawable/detroit_tigers" />

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tiger_image"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionHeading"
                android:text="@string/question_one_header" />

            <LinearLayout style="@style/QuestionBox">

                <TextView
                    style="@style/QuestionContent"
                    android:text="@string/question_one" />

                <CheckBox
                    android:id="@+id/check_button_1_a"
                    style="@style/CheckBox"
                    android:text="@string/question_one_answer_a" />

                <CheckBox
                    android:id="@+id/check_button_1_b"
                    style="@style/CheckBox"
                    android:text="@string/question_one_answer_b" />

                <CheckBox
                    android:id="@+id/check_button_1_c"
                    style="@style/CheckBox"
                    android:text="@string/question_one_answer_c" />

                <CheckBox
                    android:id="@+id/check_button_1_d"
                    style="@style/CheckBox"
                    android:text="@string/question_one_answer_d" />

            </LinearLayout>

            <TextView
                style="@style/QuestionHeading"
                android:text="@string/question_two_header" />

            <LinearLayout style="@style/QuestionBox">

                <TextView
                    style="@style/QuestionContent"
                    android:text="@string/question_two" />

                <RadioGroup style="@style/RadioGroup">

                    <RadioButton
                        android:id="@+id/radio_button_1_a"
                        style="@style/RadioButton"
                        android:text="@string/question_two_answer_a" />

                    <RadioButton
                        android:id="@+id/radio_button_1_b"
                        style="@style/RadioButton"
                        android:text="@string/question_two_answer_b" />

                </RadioGroup>

            </LinearLayout>

            <TextView
                style="@style/QuestionHeading"
                android:text="@string/question_three_header" />

            <LinearLayout style="@style/QuestionBox">

                <TextView
                    style="@style/QuestionContent"
                    android:text="@string/question_three" />

                <EditText
                    android:id="@+id/text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/question_three_answer"
                    android:inputType="text" />

            </LinearLayout>

            <TextView
                style="@style/QuestionHeading"
                android:text="@string/question_four_header" />

            <LinearLayout style="@style/QuestionBox">

                <TextView
                    style="@style/QuestionContent"
                    android:text="@string/question_four" />

                <RadioGroup style="@style/RadioGroup">

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/question_four_answer_a" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/question_four_answer_b" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/question_four_answer_c" />

                    <RadioButton
                        android:id="@+id/radio_button_4_d"
                        style="@style/RadioButton"
                        android:text="@string/question_four_answer_d" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                style="@style/QuestionHeading"
                android:text="@string/question_five_header" />

            <LinearLayout style="@style/QuestionBox">

                <TextView
                    style="@style/QuestionContent"
                    android:text="@string/question_five" />

                <RadioGroup style="@style/RadioGroup">

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/question_five_answer_a" />

                    <RadioButton
                        android:id="@+id/question_five_answer_b"
                        style="@style/RadioButton"
                        android:text="@string/question_five_answer_b" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/question_five_answer_c" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/question_five_answer_d" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/main_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:onClick="submitAnswers"
            android:text="@string/submit_button" />

    </RelativeLayout>
</ScrollView>

